--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="current_incidents_btn">Current Incidents</string>
     <string name="roadworks_btn">Roadworks</string>
     <string name="planned_roadworks">Planned Roadworks</string>
+    <string name="recycler_view_description">Welcome to the Traffic Scotland Mobile Application! This app
+        is designed to display RSS feeds from the Traffic Scotland Website. To view Current Incidents, Roadworks
+        or Planned Roadworks, please select one of the three buttons above.Thank you!</string>
 </resources>
