--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Traffic Scotland</string>
-    <string name="current_incidents_btn">Current Incidents</string>
+    <string name="current_incidents_btn">Incidents</string>
     <string name="roadworks_btn">Roadworks</string>
     <string name="planned_roadworks">Planned Roadworks</string>
     <string name="recycler_view_description">Welcome to the Traffic Scotland Mobile Application! This app
