--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
+<!--
+    Christopher Conlan
+    Created On: 14/04/2020
+    Student No: S1512271
+    Mobile Platform Development Coursework
+-->
+
 <resources>
     <string name="app_name">Traffic Scotland</string>
     <string name="current_incidents_btn">Incidents</string>
